2010-06-10  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #14696: mapping module shows error in workspace 
	* Fixed issue: #5457: Clean XML doesn't save changes when using workspaces 
	* Fixed issue: #14694: FlashMessage should be used instead of individual message formats 
	* Fixed issue: #14579: Documentation states hook that has been removed in 2006 

2010-05-31  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14531: TOs Showing up in in other sites when not in their GRSP on multi-domain installation. 
	* Fixed issue: #14548: Call to undefined method tx_templavoila_template::getScope() 

2010-05-30  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #13722: Typoscript Object Path gets lost when using Hook for eTypesExtraFormFields TypoScriptObject 
	* Fixed issue: #14226: Mapping TS always makes it HSC=1 // Review eType preset behaviour 
	* Fixed issue: #13950: Page TOs with static DSs show up in all sites and do not honor GRSP

2010-05-18  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14346: External URL with no urltype not shown up (Thanks to Benjamin Mack)
	* Fixed issue: #13079: Followup: Hooks to reprocess lKey and vKey.

2010-05-02  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14253: Disable drag&drop feature on a per-user and a per-pagebranch basis 
	* Fixed issue: #12204: Missing clause in XHTML conditional comments like <!--[if lte IE 6]> 

2010-04-29  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14213: "To Top" checkbox is missing in FlexContent (Thanks to Patrick Gaumond)
	* Fixed issue: #11842: mapping type RANGE not available when tag has both id and class attribute (Thanks to Jigal van Hemert)

2010-04-25  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed issue: #14162: Feature(tte): Make current field's name available as register (Thanks to Francois Suter)
	* Fixed issue: #14056: static ds wizard error-handling improvement if conf is missing